--- a/src/pages/hero/components/navbar.css
+++ b/src/pages/hero/components/navbar.css
@@ -38,6 +38,7 @@
 }
 
 #navbar .nav-link {
+	color: var(--color-white);
 	cursor: pointer;
 	transition: all 0.3s ease;
 }
